# rpi-embedded

./: .gitignore  .gitmodules  README.md  calibration.txt
check_nfc/: check_nfc.ino
cm4_atmega328p_copy_/: cm4_atmega328p_copy_.ino
imu_calibration/: CMakeLists.txt  calibration.cpp  main.cpp
pn532/: pn532_uno.cpp  pn532_uno.h
src/: .gitignore  CMakeLists.txt  config.h  config.yaml  monitor.sh  uart_monitor.service
src/control/: controlal.cpp  controlal.h
src/robot/: device.h  device_CM4.cpp  device_CM4.h  device_ROCKS.cpp  device_ROCKS.h  device_pigpio.cpp  device_pigpio.h  nrf2401.cpp  nrf2401.h  robotz.cpp  robotz.h  sensor.h  wifiz.cpp  wifiz.h
src/share/proto/: robot_comm.proto  zss_cmd.proto
src/unit_test/: test_comm.cpp  test_comm_2401.cpp  test_control.cpp  test_controlal.cpp  test_i2c.cpp  test_motors.cpp  test_old_ver.cpp
test_imu/: CMakeLists.txt  imu.h  main.cpp  test1.cpp
test_pn532/: test_pn532.ino
write_info/: write_info.ino
write_key/: write_key.ino
